@@ -1,3 +1,6 @@
+	Properties für Consors anpassen (closes #35)
+	Kennzahlen von Wertpapieren vergleichen (closes #12)
+	Performance von Wertpapieren auf Jahresbasis (close #32)
 	Import von Kursdaten via CSV-Datei möglich
 	Steuern und Transaktionskosten können bei den Umsätzen verwaltet werden (closes #29)
 	
